--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "npm-run-all": "^4.1.5",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "graphql-tag": "^2.10.4",
+    "graphql-yoga": "^1.18.3"
   }
 }
