--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "firebase-admin": "^9.0.0",
     "graphql-tag": "^2.10.4",
     "graphql-yoga": "^1.18.3",
     "typeorm": "^0.2.25"
